Fix transparent images in dark mode. Also bump version.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -361,4 +361,7 @@ label {
     border-color: #666;
     color: #efefef;
   }
+  .post img, .comment img {
+    background-color: #efefef;
+  }
 }
